<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_main_screen"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/ic_baseline_cloud_download_24"
            android:background="@color/design_default_color_primary" />

        <RadioGroup
            android:id="@+id/rg_download_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/custom_button"
            android:layout_below="@+id/image_main_screen"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp">

            <RadioButton
                android:id="@+id/rb_download_glide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/rb_glide"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_download_updacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/rb_loader"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_download_retrofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/rb_retrofit"
                android:textSize="18sp" />
        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            app:arc_color="@color/colorAccent"
            app:button_background_default_color="@color/colorPrimary"
            app:button_background_progress_color="@color/colorPrimaryDark"
            app:button_text_color="@color/white"
            app:loader_default_text="@string/loader_button_default_text"
            app:loader_progress_text="@string/loader_button_loading_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>
</layout>